--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="oldy.jpeg" alt="Guanhua Profile Picture"></td>
+      <td><img src="Oldy.jpeg" alt="Guanhua Profile Picture"></td>
       <td>
         <h1>Guanhua Wen</h1>
         <p><em>Come check out my <strong><a href="https://daydaynews.cc/en/history/the-truth-revealed-the-mystery-of-qiao-guanhuas-soul.html">body double</a></strong></em></p>
